--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="catalog-wrapper">
               <ul class="catalog-list">
                 <li class="catalog-item catalog-item-title">Новики</li>
-                <li class="catalog-item"><a class="catalog-item-link" href="/catalog.html">Сливочное</a></li>
+                <li class="catalog-item"><a class="catalog-item-link" href="catalog.html">Сливочное</a></li>
                 <li class="catalog-item"><a class="catalog-item-link" href="#">Щербеты</a></li>
                 <li class="catalog-item"><a class="catalog-item-link" href="#">Фруктовый лед</a></li>
                 <li class="catalog-item"><a class="catalog-item-link" href="#">Мелорин</a></li>
@@ -40,7 +40,7 @@
           </li>
           <li class="navigation-item navigation-item-search">
             <a class="navigation-btn navigation-btn-active" href="#">
-              <span class="visually-hidden">Поиск</span>
+              <span class="visually-hidden">Поиск.</span>
             </a>
             <form class="form-search form-search-active" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden" for="search-field">Поле поиска</label>
@@ -98,11 +98,11 @@
                 <img class="slider-picture-icecream" src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом" width="306" height="507">
                 <button class="slider-button slider-prev" type="button">
                   <svg class="arrow-left" width="6" height="12" fill="none" viewBox="0 0 6 12" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.8 1.8a.66.66 0 1 0-.94-.94L.2 5.53a.66.66 0 0 0 0 .94l4.67 4.67a.66.66 0 0 0 .94-.94L1.6 6l4.2-4.2Z"/></svg>
-                  <span class="visually-hidden">Предыдущее фото</span>
+                  <span class="visually-hidden">Предыдущее фото.</span>
                 </button>
                 <button class="slider-button slider-next" type="button">
                   <svg class="arrow-right" width="6" height="12" fill="none" viewBox="0 0 6 12" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M5.8 1.8a.66.66 0 1 0-.94-.94L.2 5.53a.66.66 0 0 0 0 .94l4.67 4.67a.66.66 0 0 0 .94-.94L1.6 6l4.2-4.2Z"/></svg>
-                  <span class="visually-hidden">Следующее фото</span>
+                  <span class="visually-hidden">Следующее фото.</span>
                 </button>
               </div>
               <div class="picture-second">
@@ -115,10 +115,10 @@
             <div class="slider-picture">
               <img class="slider-picture-icecream" src="img/ice-cream-butter.png" alt="Сливочное мороженое со вкусом банана" width="306" height="507">
               <button class="slider-button slider-prev" type="button">
-                <span class="visually-hidden">Предыдущее фото</span>
+                <span class="visually-hidden">Предыдущее фото.</span>
               </button>
               <button class="slider-button slider-next" type="button">
-                <span class="visually-hidden">Следующее фото</span>
+                <span class="visually-hidden">Следующее фото.</span>
               </button>
               <img src="img/ice-cream-caramel-marshmellow.png" alt="Карамельный пломбир с маршмеллоу" class="slider-image slider-image-size" width="66" height="150">
               <img src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом" class="slider-image slider-image-size" width="66" height="150">
@@ -126,10 +126,10 @@
             <div class="slider-picture">
               <img class="slider-picture-icecream" src="img/ice-cream-caramel-marshmellow.png" alt="Карамельный пломбир с маршмеллоу" width="306" height="507">
               <button class="slider-button slider-prev" type="button">
-                <span class="visually-hidden">Предыдущее фото</span>
+                <span class="visually-hidden">Предыдущее фото.</span>
               </button>
               <button class="slider-button slider-next" type="button">
-                <span class="visually-hidden">Следующее фото</span>
+                <span class="visually-hidden">Следующее фото.</span>
               </button>
               <img src="img/ice-cream-strawberry-jam.png" alt="Нежный пломбир с клубничным джемом" class="slider-image slider-image-size" width="66" height="150">
               <img src="img/ice-cream-butter.png" alt="Сливочное мороженое со вкусом банана" class="slider-image slider-image-size" width="66" height="150">
@@ -140,34 +140,34 @@
           <ol class="slider-pagination">
             <li class="slider-pagination-item">
               <button class="slider-pagination-btn slider-pagination-btn-current" type="button">
-                <span class="visually-hidden">Стиль 1</span>
+                <span class="visually-hidden">Стиль 1.</span>
               </button>
             </li>
             <li class="slider-pagination-item">
               <button class="slider-pagination-btn" type="button">
-                <span class="visually-hidden">Стиль 2</span>
+                <span class="visually-hidden">Стиль 2.</span>
               </button>
             </li>
             <li class="slider-pagination-item">
               <button class="slider-pagination-btn" type="button">
-                <span class="visually-hidden">Стиль 3</span>
+                <span class="visually-hidden">Стиль 3.</span>
               </button>
             </li>
           </ol>
           <ul class="social-list">
             <li class="social-item">
               <a class="social-link social-link-vk" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">ВКонтакте</span>
+                <span class="visually-hidden">ВКонтакте.</span>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link social-link-fb" href="https://www.facebook.com/htmlacademy">
-                <span class="visually-hidden">Фейсбук</span>
+                <span class="visually-hidden">Фейсбук.</span>
               </a>
             </li>
             <li class="social-item">
               <a class="social-link social-link-inst" href="https://www.instagram.com/htmlacademy/">
-                <span class="visually-hidden">Инстаграм</span>
+                <span class="visually-hidden">Инстаграм.</span>
               </a>
             </li>
           </ul>
@@ -185,7 +185,7 @@
                 <p class="offers-raspberry-description">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
                 <a class="btn btn-white" href="#" aria-label="Хочу подарок">Хочу подарок</a>
               </div>
-              <div class="offers-raspberry-wrapper">
+              <div class="offers-raspberry-image-wrapper">
                 <img class="offers-raspberry-image" src="img/basket-raspberries.png" alt="Корзинка с малиной" width="181" height="240">
               </div>
             </div>
@@ -195,7 +195,7 @@
                 <p class="offers-marshmallow-description">При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
                 <a class="btn btn-white" href="#" aria-label="Хочу подарок">Хочу подарок</a>
               </div>
-              <div class="offers-marshmallow-wrapper">
+              <div class="offers-marshmallow-image-wrapper">
                 <img class="offers-marshmallow-image" src="img/basket-marshmallows.png" alt="Корзинка с маршмеллоу" width="232" height="249">
               </div>
             </div>
@@ -214,7 +214,7 @@
                 <b class="product-item-price">310 <span class="weight">₽/кг</span></b>
                 <a class="btn-basket" href="#">
                   <svg class="basket-buy-icon" width="15" height="14" fill="none" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.1667.25a.6667.6667 0 1 0 0 1.3333h1.7712l.4675 2.3354a.664.664 0 0 0 .0106.0531l.9674 4.8333.0001.0006a1.8255 1.8255 0 0 0 1.8183 1.4691h5.6207a1.8258 1.8258 0 0 0 1.8185-1.4697l.001-.005.9271-4.8614a.6669.6669 0 0 0-.6549-.7915H4.6107L4.1381.7858A.6667.6667 0 0 0 3.4844.25H1.1667ZM5.691 8.5444l-.8134-4.0639h8.2308l-.7756 4.0669a.4923.4923 0 0 1-.4918.3942v-.0001H6.1962v-.0001l-.0128.0002a.4922.4922 0 0 1-.4922-.3962l-.0002-.001Zm-1.1336 3.961c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457Zm6.3733 0c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457Z"/></svg>
-                  <span class="visually-hidden">Добавить в корзину</span>
+                  <span class="visually-hidden">Добавить в корзину.</span>
                 </a>
               </div>
             </li>
@@ -228,7 +228,7 @@
                 <b class="product-item-price">340 <span class="weight">₽/кг</span></b>
                 <a class="btn-basket" href="#">
                   <svg class="basket-buy-icon" width="15" height="14" fill="none" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.1667.25a.6667.6667 0 1 0 0 1.3333h1.7712l.4675 2.3354a.664.664 0 0 0 .0106.0531l.9674 4.8333.0001.0006a1.8255 1.8255 0 0 0 1.8183 1.4691h5.6207a1.8258 1.8258 0 0 0 1.8185-1.4697l.001-.005.9271-4.8614a.6669.6669 0 0 0-.6549-.7915H4.6107L4.1381.7858A.6667.6667 0 0 0 3.4844.25H1.1667ZM5.691 8.5444l-.8134-4.0639h8.2308l-.7756 4.0669a.4923.4923 0 0 1-.4918.3942v-.0001H6.1962v-.0001l-.0128.0002a.4922.4922 0 0 1-.4922-.3962l-.0002-.001Zm-1.1336 3.961c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457Zm6.3733 0c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457Z"/></svg>
-                  <span class="visually-hidden">Добавить в корзину</span>
+                  <span class="visually-hidden">Добавить в корзину.</span>
                 </a>
               </div>
             </li>
@@ -242,7 +242,7 @@
                 <b class="product-item-price">330 <span class="weight">₽/кг</span></b>
                 <a class="btn-basket" href="#">
                   <svg class="basket-buy-icon" width="15" height="14" fill="none" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.1667.25a.6667.6667 0 1 0 0 1.3333h1.7712l.4675 2.3354a.664.664 0 0 0 .0106.0531l.9674 4.8333.0001.0006a1.8255 1.8255 0 0 0 1.8183 1.4691h5.6207a1.8258 1.8258 0 0 0 1.8185-1.4697l.001-.005.9271-4.8614a.6669.6669 0 0 0-.6549-.7915H4.6107L4.1381.7858A.6667.6667 0 0 0 3.4844.25H1.1667ZM5.691 8.5444l-.8134-4.0639h8.2308l-.7756 4.0669a.4923.4923 0 0 1-.4918.3942v-.0001H6.1962v-.0001l-.0128.0002a.4922.4922 0 0 1-.4922-.3962l-.0002-.001Zm-1.1336 3.961c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457Zm6.3733 0c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457Z"/></svg>
-                  <span class="visually-hidden">Добавить в корзину</span>
+                  <span class="visually-hidden">Добавить в корзину.</span>
                 </a>
               </div>
             </li>
@@ -256,7 +256,7 @@
                 <b class="product-item-price">320 <span class="weight">₽/кг</span></b>
                 <a class="btn-basket" href="#">
                   <svg class="basket-buy-icon" width="15" height="14" fill="none" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.1667.25a.6667.6667 0 1 0 0 1.3333h1.7712l.4675 2.3354a.664.664 0 0 0 .0106.0531l.9674 4.8333.0001.0006a1.8255 1.8255 0 0 0 1.8183 1.4691h5.6207a1.8258 1.8258 0 0 0 1.8185-1.4697l.001-.005.9271-4.8614a.6669.6669 0 0 0-.6549-.7915H4.6107L4.1381.7858A.6667.6667 0 0 0 3.4844.25H1.1667ZM5.691 8.5444l-.8134-4.0639h8.2308l-.7756 4.0669a.4923.4923 0 0 1-.4918.3942v-.0001H6.1962v-.0001l-.0128.0002a.4922.4922 0 0 1-.4922-.3962l-.0002-.001Zm-1.1336 3.961c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457Zm6.3733 0c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457Z"/></svg>
-                  <span class="visually-hidden">Добавить в корзину</span>
+                  <span class="visually-hidden">Добавить в корзину.</span>
                 </a>
               </div>
             </li>
@@ -313,7 +313,7 @@
                   <label for="delivery-date">Дата</label>
                   <button class="info" type="button">
                     <span class="info-text">Введите дату доставки</span>
-                    <span class="visually-hidden">Посмотреть дополнительную информацию</span>
+                    <span class="visually-hidden">Посмотреть дополнительную информацию.</span>
                   </button>
                 </span>
                 <input type="text" id="delivery-date" name="delivery-date" placeholder="01.04.2020">
@@ -324,10 +324,10 @@
               </p>
               <p class="field-group delivery-form-address">
                 <span class="form-label form-label-icon">
-                   <label for="delivery-address">Адрес</label>
-                   <button class="info" type="button">
-                     <span class="info-text">Введите название улицы, дома и квартиры</span>
-                    <span class="visually-hidden">Посмотреть дополнительную информацию</span>
+                  <label for="delivery-address">Адрес</label>
+                  <button class="info" type="button">
+                    <span class="info-text">Введите название улицы, дома и квартиры</span>
+                    <span class="visually-hidden">Посмотреть дополнительную информацию.</span>
                   </button>
                 </span>
                 <input type="text" id="delivery-address" name="delivery-address" placeholder="ул. Большая Конюшенная, 19/8">
@@ -356,17 +356,17 @@
           <ul class="social-list footer-social-list">
             <li class="social-item">
               <a class="footer-social social-link social-link-vk" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">ВКонтакте</span>
+                <span class="visually-hidden">ВКонтакте.</span>
               </a>
             </li>
             <li class="social-item">
               <a class="footer-social social-link social-link-fb" href="https://www.facebook.com/htmlacademy">
-                <span class="visually-hidden">Фейсбук</span>
+                <span class="visually-hidden">Фейсбук.</span>
               </a>
             </li>
             <li class="social-item">
               <a class="footer-social social-link social-link-inst" href="https://www.instagram.com/htmlacademy/">
-                <span class="visually-hidden">Инстаграм</span>
+                <span class="visually-hidden">Инстаграм.</span>
               </a>
             </li>
           </ul>
@@ -397,8 +397,8 @@
     </footer>
     <div class="modal-container modal-container-close">
       <div class="modal modal-auth">
-        <button class="modal-close-button">
-          <span class="visually-hidden">Закрыть</span>
+        <button class="modal-close-button" type="button">
+          <span class="visually-hidden">Закрыть.</span>
         </button>
         <section class="modal-content">
           <h2 class="modal-title">Мы обязательно ответим вам!</h2>
